# CS-378

./: CMakeLists.txt  Readme.md
docs/: Project_Description.md
include/: apriori.hpp  common.hpp  declat.hpp
src/: apriori.cpp  common.cpp  declat.cpp  main.cpp
tests/: test_functional.cpp  test_performance.cpp
